force-app/main/default/objects/Patient_ICD_10__c/Patient_ICD_10__c.object-meta.xml
<CustomObject>
    <label>Patient ICD-10</label>
    <nameField>
        <label>Patient ICD-10 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient ICD-10s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>