force-app/main/default/objects/Patient_ICD_10__c/fields/ICD_10__c.field-meta.xml
<CustomField>
    <fullName>ICD_10__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ICD-10</label>
    <referenceTo>ICD_10__c</referenceTo>
    <relationshipLabel>Patient ICD-10s</relationshipLabel>
    <relationshipName>Patient_ICD_10s</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>