force-app/main/default/objects/Patient_ICD_10__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Patient ICD-10s</relationshipLabel>
    <relationshipName>Patient_ICD_10s</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>