force-app/main/default/objects/Patient_ICD_10__c/fields/Patient_Full_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_Full_ID__c</fullName>
    <formula>Patient__r.Full_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Full ID</label>
    <type>Text</type>
</CustomField>