force-app/main/default/objects/Patient_ICD_10__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ICD_10__c</columns>
    <columns>Patient__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active__c</columns>
    <columns>Reset__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>